--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
-    "lint-staged": "^12.3.5",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
@@ -38,13 +38,15 @@
   "scripts": {
     "start": "webpack-dev-server --open --mode=development",
     "build": "webpack --mode=production",
-    "lint": "eslint src/*",
-    "lint:fix": "eslint src/* --fix",
-    "lint:quiet": "eslint src/* --quiet",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
+    "lint:quiet": "eslint ./src --quiet",
     "prettier": "prettier --write ./src",
+    "prettier:staged": "pretty-quick --staged",
     "prepare": "husky install",
     "test": "jest src/",
     "test:silent": "jest src/ --silent",
-    "babel:init": "babel init"
+    "babel:init": "babel init",
+    "validate": "yarn prettier:staged && yarn lint:quiet"
   }
 }
