--- a/package.json
+++ b/package.json
@@ -1,52 +1,20 @@
 {
   "name": "prince89arora.github.io",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "https://github.com/prince89arora/prince89arora.github.io.git",
   "author": "Prince Arora <aroraprince151@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "@emotion/react": "11.9.0",
-    "@mui/material": "5.8.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "babel-loader": "^8.2.3",
     "css-loader": "^6.7.0",
     "eslint": "^8.11.0",
-    "eslint-plugin-react": "^7.29.3",
-    "html-webpack-plugin": "^5.5.0",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.6.0",
-    "prettier": "^2.5.1",
-    "pretty-quick": "^3.1.3",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-cli": "^4.9.2"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --mode=development",
-    "build": "webpack --mode=production",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
-    "lint:quiet": "eslint ./src --quiet",
-    "prettier": "prettier --write ./src",
-    "prettier:staged": "pretty-quick --staged",
-    "prepare": "husky install",
-    "test": "jest src/",
-    "test:silent": "jest src/ --silent",
-    "babel:init": "babel init",
-    "validate": "yarn prettier:staged && yarn lint:quiet"
+    "echo": "echo 'test'"
   }
 }
