--- a/package.json
+++ b/package.json
@@ -5,16 +5,11 @@
   "author": "Prince Arora <aroraprince151@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "css-loader": "^6.7.0",
     "eslint": "^8.11.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "sass": "^1.49.9",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "node-sass": "7.0.1"
   },
   "scripts": {
-    "echo": "echo 'test'"
+    "echo": "echo 'test'",
+    "build:css": "node-sass ./style/scss/index.scss style/style.scss"
   }
 }
